--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -1,11 +1,9 @@
 {
-    "extends": "airbnb",
-    "plugins": [
-        "import"
-    ],
+    "extends": "airbnb-base",
     "env": {
-        "es6": true,
-        "browser": true
+        "browser": true,
+        "node": true,
+        "es6": true
     },
     "rules": {
         "brace-style": [
