--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "dependencies": {
     "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "sqlite": "^2.9.1"
   },
