--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -6,6 +6,7 @@
         "es6": true
     },
     "rules": {
+        "indent": [2, 2, { "SwitchCase": 1, "VariableDeclarator": 1 }],
         "brace-style": [
             "error",
             "stroustrup"
