--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -12,6 +12,7 @@
         "es6": true
     },
     "rules": {
+        "indent": [2, 2, { "SwitchCase": 1, "VariableDeclarator": 1}],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
